--- a/.github/workflows/query_reddit.yml
+++ b/.github/workflows/query_reddit.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   query_reddit:
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
     defaults:
       run:
         shell: bash -el {0}
