Update query_reddit.yml to run daily

--- a/.github/workflows/query_reddit.yml
+++ b/.github/workflows/query_reddit.yml
@@ -1,8 +1,8 @@
 name: query_reddit
 on:
-  workflow_dispatch:
-  # schedule:
-  #   - cron: '20 15 * * *'
+  # workflow_dispatch:
+  schedule:
+    - cron: '54 15 * * *'
 
 jobs:
   query_reddit:
